--- a/app/src/main/res/layout/activity_domicilio_activo.xml
+++ b/app/src/main/res/layout/activity_domicilio_activo.xml
@@ -34,7 +34,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center|center_horizontal"
-                    android:layout_marginBottom="5"
+                    android:layout_marginBottom="5dp"
                     android:layout_weight="1"
                     android:text="Domicilio en Curso"
                     android:textSize="18sp"
@@ -49,8 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="5dp"
+                    android:layout_margin="5dp"
                     android:layout_weight="0"
                     android:background="#FFFFFF"
                     android:padding="3dp"
