--- a/app/src/main/res/layout/activity_domicilio_activo.xml
+++ b/app/src/main/res/layout/activity_domicilio_activo.xml
@@ -39,7 +39,7 @@
                     android:text="Domicilio en Curso"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toStartOf="@+id/imageButton4"
+                    app:layout_constraintEnd_toStartOf="@+id/btnDoAcCancel"
                     app:layout_constraintHorizontal_bias="0.205"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -338,7 +338,7 @@
                 android:orientation="horizontal">
 
                 <ImageButton
-                    android:id="@+id/imageButton"
+                    android:id="@+id/btnDoAcOk"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="30dp"
@@ -352,7 +352,7 @@
                     app:srcCompat="@drawable/img_check" />
 
                 <ImageButton
-                    android:id="@+id/imageButton4"
+                    android:id="@+id/btnDoAcCancel"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="15dp"
@@ -361,7 +361,7 @@
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
                     android:background="#E8BABA"
-                    app:layout_constraintEnd_toStartOf="@+id/imageButton"
+                    app:layout_constraintEnd_toStartOf="@+id/btnDoAcOk"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/img_cerrar" />
             </LinearLayout>
