--- a/app/src/main/res/layout/row_dos.xml
+++ b/app/src/main/res/layout/row_dos.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="0"
         android:orientation="horizontal">
 
@@ -24,7 +24,7 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="66dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="15dp"
