--- a/app/src/main/res/layout/row_uno.xml
+++ b/app/src/main/res/layout/row_uno.xml
@@ -1,59 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imageViewCuatro"
-        android:layout_width="57dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/img_cinco" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textViewUno"
-        android:layout_width="282dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:text="Origen:"
-        app:layout_constraintStart_toEndOf="@+id/imageViewCuatro"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/imageViewCuatro"
+            android:layout_width="57dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/img_dom_uno" />
 
-    <TextView
-        android:id="@+id/tvRowDos"
-        android:layout_width="284dp"
-        android:layout_height="18dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="5dp"
-        android:text="Destino:"
-        app:layout_constraintStart_toEndOf="@+id/imageViewCuatro"
-        app:layout_constraintTop_toBottomOf="@+id/textViewUno" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textViewTres"
-        android:layout_width="282dp"
-        android:layout_height="16dp"
-        android:layout_marginStart="16dp"
+            <TextView
+                android:id="@+id/textViewUno"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="20dp"
+                android:text="Origen:"
+                app:layout_constraintStart_toEndOf="@+id/imageViewCuatro"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        android:layout_marginTop="4dp"
+            <TextView
+                android:id="@+id/tvRowDos"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="5dp"
+                android:text="Destino:"
+                app:layout_constraintStart_toEndOf="@+id/imageViewCuatro"
+                app:layout_constraintTop_toBottomOf="@+id/textViewUno" />
 
-        android:text="Estado:"
-        app:layout_constraintStart_toEndOf="@+id/imageViewCuatro"
-        app:layout_constraintTop_toBottomOf="@+id/tvRowDos" />
+            <TextView
+                android:id="@+id/textViewTres"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
 
-    <View
-        android:id="@+id/divider4"
-        android:layout_width="340dp"
-        android:layout_height="2dp"
-        android:layout_marginTop="5dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTres" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_marginTop="4dp"
+
+                android:text="Estado:"
+                app:layout_constraintStart_toEndOf="@+id/imageViewCuatro"
+                app:layout_constraintTop_toBottomOf="@+id/tvRowDos" />
+
+            <View
+                android:id="@+id/divider4"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginTop="5dp"
+                android:background="?android:attr/listDivider"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewTres" />
+        </LinearLayout>
+    </LinearLayout>
+
+</LinearLayout>
