--- a/app/src/main/res/layout/row_uno.xml
+++ b/app/src/main/res/layout/row_uno.xml
@@ -14,8 +14,10 @@
             android:id="@+id/imageViewCuatro"
             android:layout_width="57dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/img_dom_uno" />
