--- a/app/src/main/res/layout/activity_domicilios_activos.xml
+++ b/app/src/main/res/layout/activity_domicilios_activos.xml
@@ -15,7 +15,7 @@
         android:layout_weight="0"
         android:background="#E64343"
         android:gravity="center"
-        android:text="Domicilios En Curso"
+        android:text="MIS DOMICILIOS"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
