--- a/app/src/main/res/layout/activity_nuevo_domicilio.xml
+++ b/app/src/main/res/layout/activity_nuevo_domicilio.xml
@@ -102,31 +102,54 @@
                 android:layout_marginBottom="20dp"
                 android:background="#F43A2C" />
 
-            <EditText
-                android:id="@+id/edtNuDoUno"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="30dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginRight="30dp"
                 android:layout_marginBottom="5dp"
-                android:layout_weight="2"
-                android:ems="10"
-                android:hint="Direccion Origen"
-                android:inputType="textPersonName" />
+                android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/edtNuDoDos"
+                <TextView
+                    android:id="@+id/txtNuDoOrigen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="4" />
+
+                <Button
+                    android:id="@+id/btnNuDoOrigen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Origen" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="30dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginRight="30dp"
                 android:layout_marginBottom="5dp"
-                android:layout_weight="2"
-                android:ems="10"
-                android:hint="Direccion Destino"
-                android:inputType="textPersonName" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/txtNuDoDestino"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="4" />
+
+                <Button
+                    android:id="@+id/btnNuDoDestino"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:text="Destino" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/edtNuDoTres"
