--- a/app/src/main/res/layout/row_dos.xml
+++ b/app/src/main/res/layout/row_dos.xml
@@ -15,6 +15,7 @@
             android:id="@+id/imageView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="5dp"
@@ -49,6 +50,11 @@
 
             <TextView
                 android:id="@+id/txtRowDosCuatro"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/txtRowDosCinco"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
