--- a/app/src/main/res/layout/activity_domicilio_activo.xml
+++ b/app/src/main/res/layout/activity_domicilio_activo.xml
@@ -191,6 +191,7 @@
                 android:layout_marginBottom="5dp"
                 android:background="@color/cardview_shadow_end_color"
                 android:backgroundTint="@android:color/holo_red_dark"
+                android:foregroundTint="#AE4545"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/textView5"
