--- a/app/src/main/res/layout/activity_domicilio_activo.xml
+++ b/app/src/main/res/layout/activity_domicilio_activo.xml
@@ -30,7 +30,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/txtMePrUsertype"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center|center_horizontal"
