--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@id/domiciliosDisponiblesFrag">
+
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.example.my_application.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/domiciliosDisponiblesFrag"
+        android:name="com.soportec.aquitoyapp.vistas.DomiciliosDisponiblesFrag"
+        android:label="Domicilios Disponibles"
+        tools:layout="@layout/fragment_domicilios_disponibles" >
+        <argument
+            android:name="datos_usuario"
+            app:argType="string" />
+    </fragment>
 
-    <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.my_application.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
-
-    <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.my_application.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
 </navigation>
