--- a/app/src/main/res/layout/fragment_domicilios_disponibles.xml
+++ b/app/src/main/res/layout/fragment_domicilios_disponibles.xml
@@ -9,21 +9,14 @@
     <!-- TODO: Update blank fragment layout -->
 
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="0"
-        android:gravity="center"
-        android:text="domicilios dosponibles"
-        android:textSize="30sp"
-        android:textStyle="bold" />
-
     <ListView
         android:id="@+id/listViewUno"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="10dp"
         android:layout_weight="0" />
 
 </LinearLayout>
