--- a/app/src/main/res/layout/fragment_domicilios_avtivos.xml
+++ b/app/src/main/res/layout/fragment_domicilios_avtivos.xml
@@ -3,31 +3,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".vistas.DomiciliosDisponiblesFrag">
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:context=".vistas.DomiciliosAvtivosFrag">
 
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0">
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <ListView
-                android:id="@+id/listViewUno"
+                android:id="@+id/listViewDos"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginBottom="10dp"
-                android:layout_weight="0" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="16dp"
+                android:layout_weight="1">
+
+            </ListView>
         </LinearLayout>
     </ScrollView>
 
