--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,9 +10,15 @@
             android:title="domilios disponibles" />
 
         <item
+            android:id="@+id/domiciliosAvtivosFrag"
+            android:title="domicilios en curso"
+            android:icon="@drawable/ico_dom_activo_dos_foreground"
+            />
+        <item
             android:id="@+id/item_logout"
             android:icon="@drawable/ico_me_pr_salir_foreground"
             android:title="Salir"
             />
+
     </group>
 </menu>
