--- a/app/src/main/res/layout/fragment_tomar_domicilio.xml
+++ b/app/src/main/res/layout/fragment_tomar_domicilio.xml
@@ -193,6 +193,17 @@
 
             </LinearLayout>
 
+            <View
+                android:id="@+id/divider2"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:background="@color/ico_app_background" />
+
             <Button
                 android:id="@+id/btnToDoUno"
                 android:layout_width="wrap_content"
